P01/Tests/SyntaxErrors/statenames6.tm
states 3
*|\++ 
A -
B +
alphabet 1 #
*|\++ # *|\++ _ R
